# silentir

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CODEBASE.md  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: architecture.md
examples/: basic_ui.py  basic_usage.py  envdot.py
scripts/: install-skill.sh  publish.sh
skills/silent/: SKILL.md  handler.py
skills/silentir/: SKILL.md  handler.py
src/silent/: __init__.py  api.py  cli.py  config.py  exceptions.py  logging.py  orchestrator.py  types.py
src/silent/models/: __init__.py  base.py  ollama_provider.py
src/silent/noters/: markdown.py  text.py
src/silent/recorders/: __init__.py  base.py  bilibili.py  file.py
src/silent/summarizers/: __init__.py  chunker.py  pipeline.py  prompts.py
src/silent/transcribers/: __init__.py  subtitles.py  whisper.py
src/silentir/: api.py  cli.py  logging.py  orchestrator.py
src/silentir/models/: base.py  openai_compatible_provider.py
src/silentir/noters/: __init__.py  base.py  json.py  text.py
src/silentir/recorders/: __init__.py  bilibili.py  youtube.py
src/silentir/transcribers/: base.py
tests/: test_bilibili_recorder.py  test_chunker.py  test_cli.py  test_file_recorder.py  test_model_config_validation.py  test_orchestrator_policy.py  test_renderers.py  test_subtitles.py  test_transcript_only.py
