[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silent"
version = "0.1.0"
description = "Generate structured notes from YouTube/Bilibili videos using local or online LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "silent contributors" }]
dependencies = [
  "yt-dlp>=2024.4.9",
]

[project.optional-dependencies]
asr = [
  "faster-whisper>=1.0.0",
]

[project.scripts]
silent = "silent.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pre-commit>=3.7.1",
  "ruff>=0.6.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["silent"]
