[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silentir"
version = "0.1.1"
description = "Generate structured notes from YouTube/Bilibili videos using local or online LLMs"
readme = "README.md"
license = { text = "MIT" }
keywords = ["ai", "video", "notes", "summarization", "transcription", "youtube", "bilibili"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
authors = [{ name = "silentir contributors" }]
dependencies = [
  "yt-dlp>=2024.4.9",
]

[project.urls]
Homepage = "https://github.com/hexlianine/silentir"
Repository = "https://github.com/hexlianine/silentir.git"

[project.optional-dependencies]
asr = [
  "faster-whisper>=1.0.0",
  "openai-whisper>=20250625",
]
ui = [
  "streamlit>=1.36.0",
  "python-dotenv>=1.0.0",
]
examples = [
  "openai",
]

[project.scripts]
silentir = "silentir.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pre-commit>=3.7.1",
  "ruff>=0.6.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["silentir"]
